2013-03-13  Jim Fowler  <jrf@Biblion>

	* Tools/setup.py: added setup.py and began defining installation
	process.

	* Tools/src/BookEntry.py (BookEntry.openSymbol): added '-s' flag
	to use altername symbol table. Added setSymbolTableName() method
	as well.

2013-03-08  Jim Fowler  <jrf@Biblion>

	* Tools/src/BookEntry.py (BookEntry.askOpenFile): Added call
	to self.bf.getDirName() so that I don't have to keep changing
	directories every time I open a file.

	* Tools/src/bookfile.py (BookFile): Added getDirName() method.

2013-03-05  Jim Fowler  <jrf@Biblion>

	* Tools/src/AJBentry.py (AJBentry.write): Corrected problem with
	additional publishers. Was not placing the 'and' between
	publishers since 'first' was never being set to False. This was a
	problem only if there were more than one additional publisher.
	(AJBentry.write): Added comma replacement in other strings.

2013-03-01  Jim Fowler  <jrf@Biblion>

	* Tools/src/menus.py (createMenus): Added Set Font... and Set Font
	Size...  to menu structure as place holders for future actions.

	* Tools/src/ui_BookEntry.ui: Reordered locations of some items
	based on the proofreading efforts.  Added "Insert Record" amd
	"Delete Record" buttons. Added keyboard shortcuts for the next and
	previous buttons as Ctrl-F (forward) and Ctrl-B (back).

	* Tools/src/BookEntry.py: Successfully proofread ajb58_books.txt.
	Commited current changes.

2013-02-26  Jim Fowler  <jrf@Biblion>

	* Tools/src/BookEntry.py (BookEntry.indexChanged): small change to
	function. If in new entry and we change the index number and type
	return, a Save Dialog would pop up and the old index number would
	return. Thus you would not go on to the index you wanted. Move the
	read of the new index number to before the askSaveEntry() dialog.

2013-02-17  Jim Fowler  <jrf@Biblion>

	* Tools/doc/introduction.rst: added more to the introduction in
	order to explain the layout of the BookEntry program.
