@@ -1,0 +1,3 @@
+This is the documentation for the BookEntry program.
+
+Use gimp File->Create->Screenshot to capture the window display
